syntax = "proto3";

package kessel.inventory.v1beta2;
import "kessel/inventory/v1beta2/resource_representations.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

message Resource {
 optional string inventory_id = 1;
 string type = 2 [(buf.validate.field).string = {min_len: 1}];
 string reporter_type = 3 [(buf.validate.field).string = {min_len: 1}];
 string reporter_instance_id = 4 [(buf.validate.field).string = {min_len: 1}];
 ResourceRepresentations representations = 5 [(buf.validate.field).required = true];

}

